--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 Body
-{ background-image:url(Look-earth-from-the-moon_2880x1800.jpg)}
+{ background-image:url (Look-earth-from-the-moon_2880x1800)}
 
 #Titre1
 {
