--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Body
 #Titre1
 {
    color: red;
-    text-shadow: 10px 10px white;
+    text-shadow: 10px 10px black;
     font-size: 110px;
     text-align: center;
 }
